--- a/QuestBoard/Views/Quest/Overview.cshtml
+++ b/QuestBoard/Views/Quest/Overview.cshtml
@@ -18,12 +18,12 @@
             <thead>
                 <tr>
                    
-                    <td>Name</td>
-                    <td>Tags</td>
-                    <td>Assigned Workers</td>
-                    <td>Progress</td>
-                    <td>Priority</td>
-                    <td></td>
+                    <th>Name</th>
+                    <th>Tags</th>
+                    <th>Assigned Workers</th>
+                    <th>Progress</th>
+                    <th>Priority</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -43,7 +43,7 @@
                         <td>Worker 1</td>
                         <td>X/X</td>
 
-                        <td>High</td>
+                        <td>@JobTask.Priority</td>
 
                         <td>
                             <a asp-area=""
