--- a/QuestBoard/Views/Quest/Add.cshtml
+++ b/QuestBoard/Views/Quest/Add.cshtml
@@ -64,7 +64,7 @@
                     <option value="High">High</option>
                 </select>
             </div>
-            <div class="mb-3">
+            <div class="mt-3">
                 <button class="btn btn-success type="submit">Save</button>
             </div>
         </form>
