--- a/QuestBoard/Views/Quest/Edit.cshtml
+++ b/QuestBoard/Views/Quest/Edit.cshtml
@@ -71,7 +71,7 @@
                 <label class="form-label">Author</label>
                 <input type="text" class="form-control bg-dark text-light" id="author" asp-for="Author" />
             </div>
-            <div class="form-group">
+            <div class="form-group ">
                 <label for="Priority">Priority</label>
                 <select name="Priority" class="form-control" asp-for="Priority">
                     <option value="Low">Low</option>
@@ -82,7 +82,7 @@
 
 
 
-            <div class="mb-3">
+            <div class="mt-3">
                 <button class="btn btn-success type="submit">Save</button>
                 <button type="submit" class="btn btn-danger ms-2"
                         asp-area=""
