added: new project pages + repository + databank tables

--- a/QuestBoard/Views/Shared/_Layout.cshtml
+++ b/QuestBoard/Views/Shared/_Layout.cshtml
@@ -33,6 +33,27 @@
 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Projects
+                            </a>
+                            <ul class="dropdown-menu   ">
+                                <li>
+                                    <a class="dropdown-item text-light"
+                                       asp-area=""
+                                       asp-controller="Project"
+                                       asp-action="Add">New Project</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item text-light"
+                                       asp-area=""
+                                       asp-controller="Project"
+                                       asp-action="List">My Projects</a>
+                                </li>
+                                
+                            </ul>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Tasks
                             </a>
                             <ul class="dropdown-menu   ">
