--- a/QuestBoard/Views/Project/Edit.cshtml
+++ b/QuestBoard/Views/Project/Edit.cshtml
@@ -1,4 +1,6 @@
-﻿@*
+﻿@model QuestBoard.Models.ViewModes.EditProjectRequest
+
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
@@ -7,5 +9,91 @@
 <div class="py-2 mb-5" id="siteHeader">
     <div class="container">
         <h2>Project Status</h2>
+    </div>
+</div>
+
+<div class="container mb-3">
+    <div>
+        @if(Model != null)
+        {
+            <form method="post">
+                <div class="mb-3">
+                    <label class="form-label">Name</label>
+                    <input type="text" class="form-control bg-dark text-light" id="name" asp-for="Name" />
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Description</label>
+                    <input type="text" class="form-control bg-dark text-light" id="description" asp-for="Description" />
+                </div>
+            </form>
+
+            <div class="container">
+                <h2>Tasks</h2>
+            </div>
+
+             <table class="table table-dark">
+            <thead>
+                <tr>
+                   
+                    <th>Name</th>
+                    <th>Tags</th>
+                    <th>Assigned Workers</th>
+                    <th>Progress</th>
+                    <th>Priority</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                    @foreach (var JobTask in Model.TaskOverviews)
+                    {
+                        <tr>
+
+                            <td>@JobTask.Name</td>
+                            <td>
+                                <div class="d-flex">
+                                   
+                                    @foreach (var tag in JobTask.Tags)
+                                    {
+                                        <span class="badge bg-body-secondary text-dark me-1">@tag.Name</span>
+                                    }
+                                </div>
+                            </td>
+                            <td>Worker 1</td>
+                            <td>
+                                <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                                    <div class="progress-bar bg-success " style="width: @JobTask.progress%">@JobTask.progress%</div>
+                                  
+                                </div>
+                            </td>
+
+                            <td>@JobTask.Priority</td>
+
+                            <td>
+                                <a asp-area=""
+                                   asp-controller="Quest"
+                                   asp-action="Edit"
+                                   asp-route-id="@JobTask.Id">
+                                    Open
+                                </a>
+                            </td>
+                        </tr>
+                    }
+
+                </tbody>
+
+            </table>
+
+            <a class="btn me-3 bg-success text-dark"
+               asp-area=""
+               asp-route-projectId ="@Model.Id"
+               asp-controller="Quest"
+               asp-action="Add">
+                Add new Task
+            </a>
+        }
+        else
+        {
+            <p>nothing found</p>
+        }
     </div>
 </div>
