--- a/QuestBoard/Views/Quest/Add.cshtml
+++ b/QuestBoard/Views/Quest/Add.cshtml
@@ -19,6 +19,7 @@
             <div class="mb-3 mt-3">
                 <label class="form-label">Task Name</label>
                 <input type="text" class="form-control  bg-dark text-light" id="name" asp-for="Name" />
+                <input type="hidden" class="form-control  bg-dark text-light" id="projectId" asp-for="projectId" />
             </div>
             <div class="mb-3">
                 <label class="form-label">Description</label>
