Bugfix: Deletion of individual tasks within a project.

--- a/QuestBoard/Views/Project/List.cshtml
+++ b/QuestBoard/Views/Project/List.cshtml
@@ -41,6 +41,10 @@
            </tbody>
        </table>
    }
+   else
+   {
+       <p>no projects found</p>
+   }
     
-    <p>List Projects</p>
+    
 </div>
