--- a/QuestBoard/Views/Quest/Edit.cshtml
+++ b/QuestBoard/Views/Quest/Edit.cshtml
@@ -18,6 +18,7 @@
             <div class="mb-3">
                 <label class="form-label">Id</label>
                 <input type="text" class="form-control bg-dark text-light" id="id" asp-for="Id" readonly />
+                <input type="hidden" class="form-control" id=" projectId" asp-for="ProjectId" />
             </div>
 
             <div class="mb-3">
