--- a/QuestBoard/Views/Project/Edit.cshtml
+++ b/QuestBoard/Views/Project/Edit.cshtml
@@ -20,12 +20,13 @@
                 <div class="mb-3">
                     <label class="form-label">Name</label>
                     <input type="text" class="form-control bg-dark text-light" id="name" asp-for="Name" />
+                    <input type="hidden" class="form-control bg-dark text-light" id="id" asp-for="Id" />
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Description</label>
                     <input type="text" class="form-control bg-dark text-light" id="description" asp-for="Description" />
                 </div>
-            </form>
+            
 
             <div class="container">
                 <h2>Tasks</h2>
@@ -90,6 +91,32 @@
                asp-action="Add">
                 Add new Task
             </a>
+
+
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <div class="py-2 mt-5 mb-3" id="siteHeader">
+                <div class="container">
+                    <h3>Submit Changes</h3>
+                </div>
+            </div>
+
+            
+            <div class="mt-3" >
+                <button class="btn btn-success type="submit">Save</button>
+                <button type="submit" class="btn btn-danger ms-2"
+                        asp-area=""
+                        asp-controller="Project"
+                        asp-action="Delete">
+                    Delete
+                </button>
+            </div>
+
+            </form>
         }
         else
         {
