added: invite teammember to project

--- a/QuestBoard/Views/Shared/_Layout.cshtml
+++ b/QuestBoard/Views/Shared/_Layout.cshtml
@@ -106,7 +106,7 @@
                         {
                             <div class="me-3 text-light">
                                 @User?.Identity?.Name
-                                @User.FindFirst(ClaimTypes.NameIdentifier)?.Value
+                                <!--User.FindFirst(ClaimTypes.NameIdentifier)?.Value-->
 
                             </div>
 
