--- a/QuestBoard/Views/Project/Edit.cshtml
+++ b/QuestBoard/Views/Project/Edit.cshtml
@@ -2,8 +2,10 @@
 
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+
 *@
 @{
+    
 }
 
 <div class="py-2 mb-5" id="siteHeader">
@@ -28,7 +30,45 @@
                 </div>
             
 
-            <div class="container">
+
+             <div class=" mt-3 mb-3">
+                   <h2>Team Member</h2>
+
+                     <table class="table table-dark">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Admin</th>
+                                <th>Delete</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach(var users in Model.Users)
+                            {
+                               
+                                <tr>
+                                    <td>@users.Name</td>
+                                    <td>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" asp-for="@users.IsAdminOfSecelectedProject">                         
+                                        </div>
+                                        
+                                     </td>
+                                    <td><button class="btn btn-danger" type="submit" asp-area="" asp-controller="Project" asp-action="removeTeamMember">X</button></td>
+                                </tr>
+                                
+                            }
+                        </tbody>
+                     </table>
+
+
+                    <label class="form-label">Invite</label>
+                    <input type="text" class="form-control bg-dark text-light" id="inviteTeamMembers" asp-for="InvitedUser" />
+                    <button class="btn btn-success mt-3 mb-3" type="submit" asp-area="" asp-controller="Project" asp-action="inviteTeamMember">Invite</button>
+             </div>
+
+
+            <div class="mt-3 mb-3">
                 <h2>Tasks</h2>
             </div>
 
@@ -107,7 +147,7 @@
 
             
             <div class="mt-3" >
-                <button class="btn btn-success type="submit">Save</button>
+                <button class="btn btn-success" type="submit">Save</button>
                 <button type="submit" class="btn btn-danger ms-2"
                         asp-area=""
                         asp-controller="Project"
