--- a/QuestBoard/Views/Project/Edit.cshtml
+++ b/QuestBoard/Views/Project/Edit.cshtml
@@ -5,7 +5,7 @@
 
 *@
 @{
-    
+
 }
 
 <div class="py-2 mb-5" id="siteHeader">
@@ -28,13 +28,13 @@
                     <label class="form-label">Description</label>
                     <input type="text" class="form-control bg-dark text-light" id="description" asp-for="Description" />
                 </div>
-            
 
 
-             <div class=" mt-3 mb-3">
-                   <h2>Team Member</h2>
 
-                     <table class="table table-dark">
+                <div class=" mt-3 mb-3">
+                    <h2>Team Member</h2>
+
+                    <table class="table table-dark">
                         <thead>
                             <tr>
                                 <th>Name</th>
@@ -45,13 +45,23 @@
                         <tbody>
                             @for(var i = 0; i < Model.Users.Count; i++)
                             {
-                               
+
                                 <tr>
                                     <td>@Model.Users[i].Name</td>
                                     <td>
                                         <div class="form-check">
                                             <input type="hidden" name="Users[i].IsAdminOfSelectedProject" value="false" />
-                                            <input class="form-check-input" type="checkbox" value="true" id="flexCheckDefault" asp-for="Users[i].IsAdminOfSelectedProject">
+
+                                            <!--Check wether user is the creator of the project and if so dieable the checkbox-->
+                                            @if (Model.Users[i].Id == Model.AdminUserRights[0]) 
+                                            {
+                                                <input class="form-check-input" disabled type="checkbox" value="true" id="flexCheckDefault" asp-for="Users[i].IsAdminOfSelectedProject">
+                                            }
+                                            else
+                                            {
+                                                <input class="form-check-input" type="checkbox" value="true" id="flexCheckDefault" asp-for="Users[i].IsAdminOfSelectedProject">
+                                            }
+                                            
 
                                             
                                             <input type="hidden" name="Users[@i].Id" value="@Model.Users[i].Id" />
@@ -59,7 +69,15 @@
                                         </div>
                                         
                                      </td>
-                                    <td><button class="btn btn-danger" type="submit" asp-area="" asp-controller="Project" asp-action="removeTeamMember">X</button></td>
+                                    <!--Check wether user is the creator of the project and if so dieable the checkbox-->
+                                    @if (Model.Users[i].Id == Model.AdminUserRights[0])
+                                    {
+                                        <td><button class="btn btn-danger" disabled type="submit" asp-area="" asp-controller="Project" asp-action="removeTeamMember" asp-route-deleteUserId="@Model.Users[i].Id">X</button></td>
+                                    }
+                                    else
+                                    {
+                                        <td><button class="btn btn-danger" type="submit" asp-area="" asp-controller="Project" asp-action="removeTeamMember" asp-route-deleteUserId="@Model.Users[i].Id">X</button></td>
+                                    }
                                 </tr>
                                 
                             }
