--- a/QuestBoard/Views/Project/Edit.cshtml
+++ b/QuestBoard/Views/Project/Edit.cshtml
@@ -8,7 +8,7 @@
 
 }
 
-<div class="py-2 mb-5" id="siteHeader">
+<div class="py-2 mb-5 siteHeader" >
     <div class="container">
         <h2>Project Status</h2>
     </div>
@@ -31,8 +31,8 @@
 
 
 
-                <div class=" mt-3 mb-3">
-                    <h2>Team Member</h2>
+                <div class=" mt-3 mb-3 ">
+                    <h2 class="siteHeader mb-3 mt-5">Team Member</h2>
 
                     <table class="table table-dark">
                         <thead>
@@ -92,7 +92,7 @@
 
 
             <div class="mt-3 mb-3">
-                <h2>Tasks</h2>
+                    <h2 class="siteHeader mt-5">Tasks</h2>
             </div>
 
              <table class="table table-dark">
@@ -122,8 +122,13 @@
                                     }
                                 </div>
                             </td>
-                            <td>Worker 1</td>
                             <td>
+                                @foreach (var user in JobTask.Users)
+                                {
+                                        <span class="badge bg-body-secondary text-dark me-1" style="max-width: 75px; overflow: hidden; text-overflow: ellipsis;">@user.Name</span>
+                                }
+                            </td>
+                            <td style="min-width: 150px">
                                 <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                                     <div class="progress-bar bg-success " style="width: @JobTask.progress%">@JobTask.progress%</div>
                                   
@@ -162,7 +167,7 @@
             <br />
             <br />
             <br />
-            <div class="py-2 mt-5 mb-3" id="siteHeader">
+                <div class="py-2 mt-5 mb-3 siteHeader">
                 <div class="container">
                     <h3>Submit Changes</h3>
                 </div>
