Projekt StatusPage - UI überarbeitet

--- a/QuestBoard/Views/Shared/_Layout.cshtml
+++ b/QuestBoard/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/QuestBoard.styles.css" asp-append-version="true" />
 </head>
-<body class="bg-dark">
+<body >
     <header class="sticky-top">
         <nav class="navbar  navbar-expand-sm navbar-toggleable-sm navbar-dark   box-shadow mb-3 ">
             <div class="container-fluid">
