--- a/QuestBoard/Views/Home/Index.cshtml
+++ b/QuestBoard/Views/Home/Index.cshtml
@@ -3,6 +3,15 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+   <!-- <h1 class="display-4">Welcome</h1> -->
+   <!--<p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>-->
+
+    
+</div>
+
+<div class="hero-section d-flex justify-content-center align-items-center" style="height: 70vh;">
+    <div class="text-center">
+        <h1>Transform your projects into seamless journeys with Questboard</h1>
+        <p>Verwalte, organisiere und tracke deine Projekte mühelos – mit Questboard hast du dein Team und alle Aufgaben immer im Griff. Plane, setze Ziele und behalte den Überblick über alle Fortschritte, während du dein Team effizient und zielgerichtet durch jedes Projekt führst. Entdecke jetzt, wie Questboard deine Arbeitsweise revolutionieren kann!</p>
+    </div>
 </div>
