--- a/QuestBoard/Views/Project/Edit.cshtml
+++ b/QuestBoard/Views/Project/Edit.cshtml
@@ -7,39 +7,45 @@
 @{
 
 }
-
-<div class="py-2 mb-5 siteHeader" >
+<form method="post"> 
+<div class="py-2 mb-3 siteHeader" >
     <div class="container">
-        <h2>Project Status</h2>
+        <h2>@Model.Name</h2>
     </div>
 </div>
 
-<div class="container mb-3 " >
-    <div>
+<div class="container statusPageContainer  mb-3 ">
+    
         @if(Model != null)
         {
-            <form method="post" >
+        
+        <div class="statusPageHeader mb-3">
+            
                 <div class="mb-3">
-                    <label class="form-label">Name</label>
-                    <input type="text" class="form-control bg-dark text-light" id="name" asp-for="Name" />
+                    <label class="form-label" >Name</label>
+                    <input type="text" class="form-control bg-dark text-light" id="name_input" asp-for="Name"/>
                     <input type="hidden" class="form-control bg-dark text-light" id="id" asp-for="Id" />
                 </div>
+                
                 <div class="mb-3">
                     <label class="form-label">Description</label>
-                    <input type="text" class="form-control bg-dark text-light" id="description" asp-for="Description" />
+                    <input type="text" class=" form-control bg-dark text-light" id="description-input" asp-for="Description" /> 
                 </div>
+               
 
+               
+        </div>
+       
+        <div class="statusPageSidebar " >
+                <div class="  mb-3 ">
+                    <h2 class=" mb-4 ">Team Member</h2>
 
-
-                <div class=" mt-3 mb-3 ">
-                    <h2 class="siteHeader mb-3 mt-5">Team Member</h2>
-
-                    <table class="table table-dark">
+                <table class="styled-table">
                         <thead>
                             <tr>
                                 <th>Name</th>
                                 <th>Admin</th>
-                                <th>Delete</th>
+                                <th>Remove</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -72,11 +78,11 @@
                                     <!--Check wether user is the creator of the project and if so dieable the checkbox-->
                                     @if (Model.Users[i].Id == Model.AdminUserRights[0])
                                     {
-                                        <td><button class="btn btn-danger @(!Model.isAdmin ? "admin-disabled" : "")" disabled type="submit" asp-area="" asp-controller="Project" asp-action="removeTeamMember" asp-route-deleteUserId="@Model.Users[i].Id">X</button></td>
+                                        <td><button class="btn btn-success @(!Model.isAdmin ? "admin-disabled" : "")" disabled type="submit" asp-area="" asp-controller="Project" asp-action="removeTeamMember" asp-route-deleteUserId="@Model.Users[i].Id">X</button></td>
                                     }
                                     else
                                     {
-                                        <td><button class="btn btn-danger @(!Model.isAdmin ? "admin-disabled" : "")" type="submit" asp-area="" asp-controller="Project" asp-action="removeTeamMember" asp-route-deleteUserId="@Model.Users[i].Id">X</button></td>
+                                        <td><button class="btn btn-success @(!Model.isAdmin ? "admin-disabled" : "")" type="submit" asp-area="" asp-controller="Project" asp-action="removeTeamMember" asp-route-deleteUserId="@Model.Users[i].Id">X</button></td>
                                     }
                                 </tr>
                                 
@@ -85,98 +91,18 @@
                      </table>
 
 
-                    <label class="form-label">Invite</label>
+                    <label class="form-label mt-3">Invite</label>
                     <input type="text" class="form-control bg-dark text-light" id="inviteTeamMembers" asp-for="InvitedUser" />
                     <button class="btn btn-success mt-3 mb-3 @(!Model.isAdmin ? "admin-disabled" : "")" type="submit" asp-area="" asp-controller="Project" asp-action="inviteTeamMember">Invite</button>
              </div>
-
-
-            <div class="mt-3 mb-3">
-                    <h2 class="siteHeader mt-5">Tasks</h2>
-            </div>
-
-             <table class="table table-dark">
-            <thead>
-                <tr>
-                   
-                    <th>Name</th>
-                    <th>Tags</th>
-                    <th>Team</th>
-                    <th>Progress</th>
-                    <th>Priority</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                    @foreach (var JobTask in Model.TaskOverviews)
-                    {
-                        <tr>
-
-                            <td>@JobTask.Name</td>
-                            <td>
-                                <div class="d-flex">
-                                   
-                                    @foreach (var tag in JobTask.Tags)
-                                    {
-                                        <span class="badge bg-body-secondary text-dark me-1">@tag.Name</span>
-                                    }
-                                </div>
-                            </td>
-                            <td>
-                                @foreach (var user in JobTask.Users)
-                                {
-                                        <span class="badge bg-body-secondary text-dark me-1" style="max-width: 75px; overflow: hidden; text-overflow: ellipsis;">@user.Name</span>
-                                }
-                            </td>
-                            <td style="min-width: 150px">
-                                <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-                                    <div class="progress-bar bg-success " style="width: @JobTask.progress%">@JobTask.progress%</div>
-                                  
-                                </div>
-                            </td>
-
-                            <td>@JobTask.Priority</td>
-
-                            <td>
-                                <a asp-area=""
-                                   asp-controller="Quest"
-                                   asp-action="Edit"
-                                   asp-route-id="@JobTask.Id">
-                                    Open
-                                </a>
-                            </td>
-                        </tr>
-                    }
-
-                </tbody>
-
-            </table>
-
-                <a class="btn me-3 bg-success text-dark @(!Model.isAdmin ? "admin-disabled" : "")"
-               asp-area=""
-               asp-route-projectId ="@Model.Id"
-               asp-controller="Quest"
-               asp-action="Add">
-                Add new Task
-            </a>
-
-
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-                <div class="py-2 mt-5 mb-3 siteHeader">
-                <div class="container">
+           
+             <div class="py-2   ">
+                <div >
                     <h3>Submit Changes</h3>
                 </div>
-            </div>
 
-            
-            <div class="mt-3" >
-                    <button class="btn btn-success @(!Model.isAdmin ? "admin-disabled" : "")" type="submit">Save</button>
-                    <button type="submit" class="btn btn-danger ms-2 @(!Model.isAdmin ? "admin-disabled" : "")"
+                <button class="btn btn-success @(!Model.isAdmin ? "admin-disabled" : "")" type="submit">Save</button>
+                <button type="submit" class="btn btn-danger ms-2 @(!Model.isAdmin ? "admin-disabled" : "")"
                         asp-area=""
                         asp-controller="Project"
                         asp-action="Delete">
@@ -184,11 +110,93 @@
                 </button>
             </div>
 
-            </form>
+        </div>
+
+        
+        <div class="main ">
+            <div class=" mb-4">
+                <h2 class="">Tasks</h2>
+            </div>
+
+            <table class="styled-table">
+                <thead>
+                    <tr>
+
+                        <th>Name</th>
+                        <!--<th>Tags</th>-->
+                       <th>Team</th> 
+                        <th>Progress</th>
+                        <th>Priority</th>
+                        
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var JobTask in Model.TaskOverviews)
+                    {
+                        <tr>
+
+                            <td>
+                                <a asp-area=""
+                                   asp-controller="Quest"
+                                   asp-action="Edit"
+                                   asp-route-id="@JobTask.Id" 
+                                   class="custom-link">
+                                    @JobTask.Name
+                                </a>
+                                
+                            </td>
+                          <!--  <td>
+                                <div class="d-flex">
+
+                                    @foreach (var tag in JobTask.Tags)
+                                    {
+                                        <span class="badge bg-primary bg-opacity-50 text-light  mb-1">@tag.Name</span>
+                                    }
+                                </div>
+                            </td> -->
+                            <td>
+                                @foreach (var user in JobTask.Users)
+                                {
+                                    <span class="badge bg-success   text-light me-1" style="max-width: 75px; overflow: hidden; text-overflow: ellipsis;">@user.Name</span>
+                                }
+                            </td>
+                            <td style="min-width: 150px">
+                                <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                                    <div class="progress-bar bg-success " style="width: @JobTask.progress%">@JobTask.progress%</div>
+
+                                </div>
+                                
+                                
+                            </td>
+
+                            <td>@JobTask.Priority</td>
+
+                            
+                        </tr>
+                    }
+
+                </tbody>
+
+            </table>
+
+            <a class="btn me-3 mt-3 bg-success text-dark @(!Model.isAdmin ? "admin-disabled" : "")"
+               asp-area=""
+               asp-route-projectId="@Model.Id"
+               asp-controller="Quest"
+               asp-action="Add">
+                Add new Task
+            </a>
+
+        </div>
+                
         }
         else
         {
             <p>nothing found</p>
         }
-    </div>
+    
 </div>
+
+</form>
+
+
